added file structure and finished writing the basic code structure for the homepage

--- a/index.html
+++ b/index.html
@@ -12,9 +12,32 @@
             <ul class="navbar-end">
                 <li><a href="./pages/about.html">About me</a></li>
                 <li><a href="./pages/my-work.html">Green Creations</a></li>
-                <li><a href="./pages/Contact.html">Contact me</a></li>
+                <li><a href="./pages/contact.html">Contact me</a></li>
             </ul>
         </nav>
     </header>
+        <main>
+            <div class="logo-container">
+            <div class="logo">
+                <img src="" type="">
+            </div>    
+            </div>
+                <section class="hero-section">
+                    <div class="hero-content">
+                        <h1 class="title">Green Creations</h1>
+                        <p class="subtitle">Transforming Outdoor Spaces: Crafting Beautiful, Sustainable Landscapes</p>
+                        <a href="./pages/my-work.html" class="btn">View My Creations</a>
+                    </div>
+                </section>
+        </main>
+        <footer>
+            <footer class="footer">
+                <div class="content has-text-centered">
+                    <p>
+                        <strong>Green Creations</strong>
+                    </p>
+                </div>
+            </footer>
+        </footer>
 </body>
 </html>
